--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "@iconify-icons/simple-icons": "^1.1.26",
+    "@iconify/react": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,9 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@iconify-icons/simple-icons": "^1.1.26",
-    "@iconify/react": "^1.1.4"
   }
 }
