--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify-icons/simple-icons": "^1.1.26",
+    "@iconify/react": "^1.1.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -16,9 +18,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1",
-    "@iconify-icons/simple-icons": "^1.1.26",
-    "@iconify/react": "^1.1.4"
+    "react-tsparticles": "^1.37.4",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
