--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "gh-pages": "^3.1.0",
+    "git-scripts": "^0.6.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
