--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
+  "git": {
+    "scripts": {
+      "pre-push": "surge --project ./bulid --domain lakshman.surge.sh"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
