--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "git": {
     "scripts": {
-      "pre-push": "surge --project ./bulid --domain lakshman.surge.sh"
+      "pre-push": "cp index.html 200.html && surge --project ./build --domain lakshman.surge.sh"
     }
   },
   "scripts": {
